fix: align all breadcrumb elements

--- a/src/pydata_sphinx_theme/assets/styles/components/_breadcrumbs.scss
+++ b/src/pydata_sphinx_theme/assets/styles/components/_breadcrumbs.scss
@@ -12,7 +12,7 @@ ul.bd-breadcrumbs {
 
   li.breadcrumb-item {
     display: flex;
-    align-items: baseline;
+    align-items: center;
 
     // Style should look like heavier in-page links
     // keeping visited in the default link colour
